--- a/style/style.css
+++ b/style/style.css
@@ -2,15 +2,16 @@
 
 
 .hour {
-    border: thick double black;
+    border: thick black;
+    padding: 10px;
+    margin-top: 4px;
+    background-color: rgb(103, 117, 197)
+
 }
 
-
-
-
-
-.col {
-    border: thick double #32a1ce;
+.hours-container {
+    height: 500px;
+    background-color: rgb(196, 183, 183)
 }
 
 
